# q1-interview

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  q1.py  q1_api.py  q1_clean.py  q1_scheduler.py  test_api.py
q1/: auth.py  model.py  redis.py  repo.py  schema.py  service.py
